force-app/main/default/objects/LookCountry__c/LookCountry__c.object-meta.xml
<CustomObject>
    <description>Link a look to a country in order to display it in the look library</description>
    <label>LookCountry</label>
    <nameField>
        <displayFormat>LookCountry{00000000}</displayFormat>
        <label>LookCountry</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LookCountry</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>