force-app/main/default/objects/LookCountry__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>LookCountry</relationshipLabel>
    <relationshipName>LookCountry</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>