force-app/main/default/objects/LookCountry__c/fields/Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Country_Name__c</fullName>
    <formula>TEXT( Country__r.Picklist__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Name</label>
    <type>Text</type>
</CustomField>