force-app/main/default/objects/LookCountry__c/fields/Look__c.field-meta.xml
<CustomField>
    <fullName>Look__c</fullName>
    <label>Look</label>
    <referenceTo>Look__c</referenceTo>
    <relationshipLabel>LookCountry</relationshipLabel>
    <relationshipName>LookCountry</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>