force-app/main/default/objects/LookCountry__c/fields/tech_zone_name__c.field-meta.xml
<CustomField>
    <fullName>tech_zone_name__c</fullName>
    <formula>Country__r.Zone__r.Name</formula>
    <label>tech_zone_name</label>
    <type>Text</type>
</CustomField>